--- a/Java设计模式/设计模式.md
+++ b/Java设计模式/设计模式.md
@@ -8,3 +8,39 @@
 | 里氏替换原则 | 不要破坏继承体系，子类重写方法功能发生改变，不应该影响父类方法的含义 | 防止继承泛滥                               |
 | 合成复用原则 | 尽量使用组合或者聚合关系实现代码复用，少使用继承             | 降低代码耦合                               |
 
+# 单例模式
+## 饿汉式单例
+~~~
+public class Singleton {
+    // 私有类变量，类一旦加载便生成实例
+    private static final Singleton instance = new Singleton();
+    
+    // 私有构造方法，则外部无法调用以生成实例
+    private Singleton() {
+    }
+    
+    // 开放公有静态方法，获取该单例类的唯一实例
+    public static Singleton getInstance() {
+        return instance;
+    }
+}
+~~~
+## 懒汉式单例
+~~~
+public class Singleton {
+    // 私有类变量
+    private static final Singleton instance = null;
+    
+    // 私有构造方法，则外部无法调用以生成实例
+    private Singleton() {
+    }
+    
+    // 开放公有静态方法，获取该单例类的唯一实例，只有在第一次调用时创建该实例
+    public static Singleton getInstance() {
+        if (instance == null) {
+            instance = new Singleton();
+        }
+        return instance;
+    }
+}
+~~~
