--- a/Java设计模式/设计模式.md
+++ b/Java设计模式/设计模式.md
@@ -25,6 +25,17 @@ public class Singleton {
     }
 }
 ~~~
+或
+~~~
+public class Singleton {
+    // 公有类变量，类一旦加载便生成实例
+    public static final Singleton instance = new Singleton();
+    
+    // 私有构造方法，则外部无法调用以生成实例
+    private Singleton() {
+    }
+}
+~~~
 ## 懒汉式单例
 ~~~
 public class Singleton {
