--- a/Java设计模式/设计模式.md
+++ b/Java设计模式/设计模式.md
@@ -36,7 +36,7 @@ public class Singleton {
     }
 }
 ~~~
-## 懒汉式单例（线程不安全）
+## 懒汉式单例
 ~~~
 public class Singleton {
     // 私有类变量
@@ -55,3 +55,6 @@ public class Singleton {
     }
 }
 ~~~
+## 另
+1. 懒汉式单例会有线程安全问题。
+2. 可以利用反射技术调用私有构造方法。
