--- a/Java设计模式/设计模式.md
+++ b/Java设计模式/设计模式.md
@@ -25,7 +25,9 @@ public class Singleton {
     }
 }
 ~~~
-或（不推荐该方法，因为若有人写了Singleton.instance = null;之后再有人调用的时候单例就为空了）
+或
+（不推荐该方法，因为若有人写了Singleton.instance = null;之后再有人调用的时候单例就为空了）
+（即该变量应该提供get方法，不提供set方法）
 ~~~
 public class Singleton {
     // 公有类变量，类一旦加载便生成实例
